[gd_scene load_steps=25 format=3 uid="uid://bkuqjtwr6f8h0"]

[ext_resource type="Script" path="res://Entities/Player/Player.gd" id="1_ylrxq"]
[ext_resource type="Texture2D" uid="uid://bqv5mj6dlsh7x" path="res://Assets/Player/CaptainNoSword.png" id="2_tdosb"]
[ext_resource type="PackedScene" uid="uid://c6ulrvs3tgtsw" path="res://Components/HealthComponent/HealthComponent.tscn" id="6_2q5v7"]
[ext_resource type="PackedScene" uid="uid://bqiaxei5ehecj" path="res://Components/Hurtbox/HurtboxComponent.tscn" id="7_in7lp"]
[ext_resource type="PackedScene" uid="uid://hx21rpjci0si" path="res://Components/StateMachine/StateMachine.tscn" id="12_0c6de"]
[ext_resource type="PackedScene" uid="uid://cucw63l07rkp2" path="res://Components/StateMachine/State.tscn" id="13_h2qxn"]
[ext_resource type="Script" path="res://Entities/Player/States/StateMachine.gd" id="13_kyfbu"]
[ext_resource type="Script" path="res://Entities/Player/States/Idle_State.gd" id="14_r6kp7"]
[ext_resource type="Script" path="res://Entities/Player/States/MovementState.gd" id="15_rpdpq"]
[ext_resource type="Script" path="res://Entities/Player/States/Jump_State.gd" id="16_0h5p8"]
[ext_resource type="Script" path="res://Entities/Player/States/Hit_State.gd" id="18_lp6dc"]
[ext_resource type="Script" path="res://Entities/Player/States/Fall_State.gd" id="18_na1is"]
[ext_resource type="Script" path="res://Entities/Player/States/Coyote.gd" id="20_csexl"]
[ext_resource type="Script" path="res://Entities/Player/States/Frozen_State.gd" id="21_wxak3"]

[sub_resource type="Animation" id="Animation_e5egy"]
resource_name = "FALL"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_mawqd"]
resource_name = "IDLE"
length = 0.50001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_7came"]
resource_name = "JUMP"
length = 0.30001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_ucedk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4e1gy"]
resource_name = "RUN"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_g5cxn"]
resource_name = "GROUND"
length = 0.20001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_cc6ag"]
resource_name = "HIT"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4la6y"]
_data = {
"FALL": SubResource("Animation_e5egy"),
"GROUND": SubResource("Animation_g5cxn"),
"HIT": SubResource("Animation_cc6ag"),
"IDLE": SubResource("Animation_mawqd"),
"JUMP": SubResource("Animation_7came"),
"RESET": SubResource("Animation_ucedk"),
"RUN": SubResource("Animation_4e1gy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8t246"]
radius = 7.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yr8wq"]
radius = 7.0
height = 22.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ylrxq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tdosb")
offset = Vector2(0, -16)
hframes = 6
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IDLE"
libraries = {
"": SubResource("AnimationLibrary_4la6y")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_8t246")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_in7lp")]
health_component = NodePath("../HealthComponent")

[node name="HurtboxCollision" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_yr8wq")
debug_color = Color(0.984314, 0.00784314, 0.34902, 0.419608)

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthComponent" parent="." instance=ExtResource("6_2q5v7")]
max_health = 5
current_health = 5

[node name="StateMachine" parent="." node_paths=PackedStringArray("default_state") instance=ExtResource("12_0c6de")]
script = ExtResource("13_kyfbu")
default_state = NodePath("Idle")

[node name="Idle" parent="StateMachine" node_paths=PackedStringArray("move_state", "jump_state") instance=ExtResource("13_h2qxn")]
script = ExtResource("14_r6kp7")
move_state = NodePath("../Movement")
jump_state = NodePath("../Jump")
animation_name = "IDLE"

[node name="Movement" parent="StateMachine" node_paths=PackedStringArray("idle_state", "jump_state", "coyote_state") instance=ExtResource("13_h2qxn")]
script = ExtResource("15_rpdpq")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
coyote_state = NodePath("../Coyote")
animation_name = "RUN"

[node name="Jump" parent="StateMachine" node_paths=PackedStringArray("fall_state") instance=ExtResource("13_h2qxn")]
script = ExtResource("16_0h5p8")
fall_state = NodePath("../Fall")
animation_name = "JUMP"

[node name="Fall" parent="StateMachine" node_paths=PackedStringArray("idle_state", "jump_state") instance=ExtResource("13_h2qxn")]
script = ExtResource("18_na1is")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
animation_name = "FALL"

[node name="Hit" parent="StateMachine" node_paths=PackedStringArray("idle_state") instance=ExtResource("13_h2qxn")]
script = ExtResource("18_lp6dc")
idle_state = NodePath("../Idle")
animation_name = "HIT"

[node name="Coyote" parent="StateMachine" node_paths=PackedStringArray("jump_state", "fall_state") instance=ExtResource("13_h2qxn")]
script = ExtResource("20_csexl")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")
animation_name = "FALL"

[node name="Frozen" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state") instance=ExtResource("13_h2qxn")]
script = ExtResource("21_wxak3")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Fall")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -48.0
offset_right = 20.0
offset_bottom = -22.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 8
text = "State"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="on_death" from="HealthComponent" to="." method="_on_health_component_on_death"]
